###############################################################################
2002-09-24 1.0.0				   01 major / 00 minor / 00 bug
 
 	! Birthday!